--- a/Classes.ipynb
+++ b/Classes.ipynb
@@ -11,7 +11,8 @@
     "    def __int__(s,n,a):\n",
     "        s.name = n\n",
     "        s.age =a \n",
-    "        "
+    "        student.s_count +=1\n",
+    "    def display(s)"
    ]
   }
  ],
