--- a/Classes.ipynb
+++ b/Classes.ipynb
@@ -12,7 +12,9 @@
     "        s.name = n\n",
     "        s.age =a \n",
     "        student.s_count +=1\n",
-    "    def display(s)"
+    "    def display(s):\n",
+    "        \n",
+    "        print(\"name is\", s.name,\"age is \", s.age, 'no of students',student.s_count)"
    ]
   }
  ],
