--- a/Classes.ipynb
+++ b/Classes.ipynb
@@ -76,6 +76,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name is  abc age is  12 no of students 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class student:\n",
+    "    s_count = 0\n",
+    "    def __init__(s,n,a):\n",
+    "        s.name = n\n",
+    "        s.age = a\n",
+    "        student.s_count +=1\n",
+    "    def display(s):\n",
+    "        print('name is ', s.name, 'age is ', s.age, 'no of students', student.s_count)\n",
+    "        \n",
+    "    def __del__(s):\n",
+    "        print(\"Object deleted sucesfully\")\n",
+    "        \n",
+    "s1 = student('abc',12)\n",
+    "s2 = student('ab',13)\n",
+    "s3 =student('a',14)\n",
+    "s1.display()\n",
+    "print(getattr(s1,'nam',0))\n",
+    "print(hasattr(s1,'name'))\n",
+    "setattr(s1,'section','xyz')\n",
+    "print(getattr(s1,'section',0))\n",
+    "delattr(s1,'name')\n",
+    "print(has)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
