--- a/Classes.ipynb
+++ b/Classes.ipynb
@@ -76,14 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name is  abc age is  12 no of students 3\n"
+      "name is  abc age is  12 no of students 3\n",
+      "0\n",
+      "True\n",
+      "xyz\n",
+      "False\n",
+      "Object deleted sucesfully\n"
      ]
     }
    ],
@@ -109,7 +114,52 @@
     "setattr(s1,'section','xyz')\n",
     "print(getattr(s1,'section',0))\n",
     "delattr(s1,'name')\n",
-    "print(has)"
+    "print(hasattr(s1,'name'))\n",
+    "del s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee.__doc__ None\n",
+      "Employe__name__ Employee\n",
+      "Employee__Module__ __main__\n",
+      "Employee__bases_- (<class 'object'>,)\n",
+      "Employee__dict__ {'__module__': '__main__', 'empCount': 0, '__init__': <function Employee.__init__ at 0x108b0fbf8>, 'displayCount': <function Employee.displayCount at 0x108b0f400>, 'displayEmployees': <function Employee.displayEmployees at 0x108b0fc80>, '__dict__': <attribute '__dict__' of 'Employee' objects>, '__weakref__': <attribute '__weakref__' of 'Employee' objects>, '__doc__': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    #common base class for all employees\n",
+    "    \n",
+    "    empCount = 0\n",
+    "\n",
+    "    def __init__(self,name,salary):\n",
+    "        self.name = name\n",
+    "        self.salary  = salary\n",
+    "        Employee.empCount +=1\n",
+    "        \n",
+    "    def displayCount(self):\n",
+    "        print(\"TotalEmployee %d\" % Employee.empCount)\n",
+    "        \n",
+    "    def displayEmployees(self):\n",
+    "        print(\"Name:\" , self.name,'salary:',self.salary)\n",
+    "        \n",
+    "        \n",
+    "print(\"Employee.__doc__\",Employee.__doc__)\n",
+    "print(\"Employe__name__\",Employee.__name__)\n",
+    "print(\"Employee__Module__\",Employee.__module__)\n",
+    "print(\"Employee__bases_-\",Employee.__bases__)\n",
+    "print(\"Employee__dict__\",Employee.__dict__)\n",
+    "\n",
+    "\n"
    ]
   },
   {
