new class on ATM

--- a/Classes.ipynb
+++ b/Classes.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
       "Employe__name__ Employee\n",
       "Employee__Module__ __main__\n",
       "Employee__bases_- (<class 'object'>,)\n",
-      "Employee__dict__ {'__module__': '__main__', 'empCount': 0, '__init__': <function Employee.__init__ at 0x108b0fbf8>, 'displayCount': <function Employee.displayCount at 0x108b0f400>, 'displayEmployees': <function Employee.displayEmployees at 0x108b0fc80>, '__dict__': <attribute '__dict__' of 'Employee' objects>, '__weakref__': <attribute '__weakref__' of 'Employee' objects>, '__doc__': None}\n"
+      "Employee__dict__ {'__module__': '__main__', 'empCount': 0, '__init__': <function Employee.__init__ at 0x107ddc9d8>, 'displayCount': <function Employee.displayCount at 0x107ddcd08>, 'displayEmployees': <function Employee.displayEmployees at 0x107ddc840>, '__dict__': <attribute '__dict__' of 'Employee' objects>, '__weakref__': <attribute '__weakref__' of 'Employee' objects>, '__doc__': None}\n"
      ]
     }
    ],
@@ -164,6 +164,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!!! Welcome to the Deposit & Withdrawal Machine\n",
+      "Enter amount to be Deposited: 123\n",
+      "\n",
+      " Amount Deposited: 123.0\n",
+      "Enter amount to be Withdrawn: 234\n",
+      "\n",
+      " Insufficient balance \n",
+      "\n",
+      " Net Available Balance= 123.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to create Bankaccount class \n",
+    "# with both a deposit() and a withdraw() function \n",
+    "class Bank_Account: \n",
+    "\tdef __init__(self): \n",
+    "\t\tself.balance=0\n",
+    "\t\tprint(\"Hello!!! Welcome to the Deposit & Withdrawal Machine\") \n",
+    "\n",
+    "\tdef deposit(self): \n",
+    "\t\tamount=float(input(\"Enter amount to be Deposited: \")) \n",
+    "\t\tself.balance += amount \n",
+    "\t\tprint(\"\\n Amount Deposited:\",amount) \n",
+    "\n",
+    "\tdef withdraw(self): \n",
+    "\t\tamount = float(input(\"Enter amount to be Withdrawn: \")) \n",
+    "\t\tif self.balance>=amount: \n",
+    "\t\t\tself.balance-=amount \n",
+    "\t\t\tprint(\"\\n You Withdrew:\", amount) \n",
+    "\t\telse: \n",
+    "\t\t\tprint(\"\\n Insufficient balance \") \n",
+    "\n",
+    "\tdef display(self): \n",
+    "\t\tprint(\"\\n Net Available Balance=\",self.balance) \n",
+    "\n",
+    "# Driver code \n",
+    "\n",
+    "# creating an object of class \n",
+    "s = Bank_Account() \n",
+    "\n",
+    "# Calling functions with that class object \n",
+    "s.deposit() \n",
+    "s.withdraw() \n",
+    "s.display() \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class BankAccount:\n",
+    "    \"\"\"A class example in python that models a bank account\"\"\"\n",
+    "    def __init__(self, first_name, last_name, account_num, balance=0):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.account_num = account_num\n",
+    "        self.balance = balance\n",
+    "        self.transactions = []\n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "        self.transactions.append(+amount)\n",
+    "        return amount\n",
+    "    def withdrawal(self, amount, limit=500):\n",
+    "        if self.balance - amount > 0 and amount <= limit:\n",
+    "            self.balance -= amount\n",
+    "            self.transactions.append(-amount)\n",
+    "            return amount\n",
+    "        else:\n",
+    "            return 'Your withdrawal amount is ${} which exceeds your account limit! You have:' \\\n",
+    "                   '\\n${}. Your withdrawal limit is {}'.format(amount, self.balance, limit)\n",
+    "    def get_first_name(self):\n",
+    "        return self.first_name\n",
+    "    def get_last_name(self):\n",
+    "        return self.last_name\n",
+    "    def get_account_num(self):\n",
+    "        return self.account_num\n",
+    "    def get_balance(self):\n",
+    "        return self.balance\n",
+    "    def recent_transactions(self):\n",
+    "        if len(self.transactions) < 1:\n",
+    "            return None\n",
+    "        else:\n",
+    "            return self.transactions.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first name = Doug\n",
+      "last name = Purcell\n",
+      "account number = 3628902828\n",
+      "account balance = 0\n",
+      "deposit = 20\n",
+      "recent transaction is: 20\n",
+      "account balance = 20\n",
+      "withdrawal = Your withdrawal amount is $50 which exceeds your account limit! You have:\n",
+      "$20. Your withdrawal limit is 500\n",
+      "recent transaction is = None\n",
+      "account balance = 20\n",
+      "deposit = 500\n",
+      "withdrawal = Your withdrawal amount is $891 which exceeds your account limit! You have:\n",
+      "$520. Your withdrawal limit is 500\n",
+      "recent transaction is = 500\n",
+      "withdrawal = 49\n",
+      "recent transaction is = -49\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = BankAccount('Doug', 'Purcell', 3628902828)\n",
+    "print('first name =', a.get_first_name())\n",
+    "print('last name =', a.get_last_name())\n",
+    "print('account number =', a.get_account_num())\n",
+    "print('account balance =', a.get_balance())\n",
+    "print('deposit =', a.deposit(20))\n",
+    "print('recent transaction is:', a.recent_transactions())\n",
+    "print('account balance =', a.get_balance())\n",
+    "print('withdrawal =', a.withdrawal(50))\n",
+    "print('recent transaction is =', a.recent_transactions())\n",
+    "print('account balance =', a.get_balance())\n",
+    "print('deposit =', a.deposit(500))\n",
+    "print('withdrawal =', a.withdrawal(891))\n",
+    "print('recent transaction is =', a.recent_transactions())\n",
+    "print('withdrawal =', a.withdrawal(49))\n",
+    "print('recent transaction is =', a.recent_transactions())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -175,18 +336,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
