--- a/Classes-Part 2.ipynb
+++ b/Classes-Part 2.ipynb
@@ -55,6 +55,12 @@
     "        print('\\n The Balance is :', self.balance)\n",
     "        \n",
     "    def Transactions(self):\n",
+    "        x = len(t)\n",
+    "        if x <10:\n",
+    "            print(t)\n",
+    "        else:\n",
+    "            for i in range(-1,-11,-1):\n",
+    "                print(t[i])\n",
     "        \n",
     "        \n",
     "s = ATM()\n",
