--- a/Classes-Part 2.ipynb
+++ b/Classes-Part 2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -22,13 +22,13 @@
      "output_type": "stream",
      "text": [
       "Hello! welcome to The Atm Machine\n",
-      "Enter the amount to be deposited15000\n",
+      "Enter the amount to be deposited12331\n",
       "\n",
-      " Amount Deposited:  15000.0\n",
-      "enter the amount To be withDrawn7500\n",
-      "You withdrew 7500.0\n",
+      " Amount Deposited:  12331.0\n",
+      "enter the amount To be withDrawn1231\n",
+      "You withdrew 1231.0\n",
       "\n",
-      " The Balance is : 7500.0\n"
+      " The Balance is : 11100.0\n"
      ]
     }
    ],
@@ -54,13 +54,13 @@
     "    def display(self):\n",
     "        print('\\n The Balance is :', self.balance)\n",
     "        \n",
-    "    def Transactions(self):\n",
-    "        x = len(t)\n",
-    "        if x <10:\n",
-    "            print(t)\n",
-    "        else:\n",
-    "            for i in range(-1,-11,-1):\n",
-    "                print(t[i])\n",
+    "#     def Transactions(self):\n",
+    "#         x = len(self)\n",
+    "#         if x <10:\n",
+    "#             print(t)\n",
+    "#         else:\n",
+    "#             for i in range(-1,-11,-1):\n",
+    "#                 print(t[i])\n",
     "        \n",
     "        \n",
     "s = ATM()\n",
@@ -68,6 +68,7 @@
     "s.deposit()\n",
     "s.withDraw()\n",
     "s.display()\n",
+    "# s.Transactions()\n",
     "        \n",
     "        \n",
     "        \n",
