--- a/Overloading.ipynb
+++ b/Overloading.ipynb
@@ -234,6 +234,8 @@
     "    def gears(self):\n",
     "        a int(input(\"No of gears we have\"))\n",
     "        \n",
+    "     \n",
+    "        \n",
     "        \n",
     "b = Byke()\n",
     "b.engine()\n",
@@ -242,6 +244,58 @@
     "b.Cost()\n",
     "b.color()\n",
     "b.company()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a class converter which is having 2 methods 1 st and second vice versa\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select 1. if you want to convert ruppes to dolars and select 2 if you want to convert dolars to ruppers\n",
+      "\n",
+      " entet the option1\n",
+      "Enter the number of ruppers480\n",
+      "the number of dolars : 6.857142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "class convertor:\n",
+    "    def check(self):\n",
+    "        print(\"Select 1. if you want to convert ruppes to dolars and select 2 if you want to convert dolars to ruppers\")\n",
+    "        \n",
+    "        a = int(input(\"\\n entet the option\"))\n",
+    "        \n",
+    "        if(a == 1):\n",
+    "            b = int(input(\"Enter the number of ruppers\"))\n",
+    "            \n",
+    "            c = b/70\n",
+    "            print('the number of dolars :',c)\n",
+    "            \n",
+    "        if(a==2):\n",
+    "            b = int(input(\"Enter the numver of dollars\"))\n",
+    "            \n",
+    "            c = b*70\n",
+    "            print(\"The number of ruppess :\",c)\n",
+    "            \n",
+    "            \n",
+    "c  = convertor()\n",
+    "c.check()\n",
+    "       "
    ]
   },
   {
